# Color-Template-Library

./: .clang-format  CMakeLists.txt
doc/: doxygen.conf
src/: Alpha.h  Angle.h  CMakeLists.txt  Channel.h  Color.h  ColorCast.h  ConvertUtil.h  CylindricalColor.h  Exceptions.h  FlatColorPacker.h  FlatColorUnpacker.h  Hsi.h  Hsl.h  Hsv.h  NamedColors.h  Packer.h  Rgb.h  StreamPacker.h  StreamUnpacker.h  ToHsi.h  ToHsl.h  ToHsv.h  ToRgb.h  Tuple_Util.h  Unpacker.h
test/: CMakeLists.txt  test.cpp
test/unit/: Alpha.cpp  Assertions.h  CMakeLists.txt  Color.cpp  ColorCast.cpp  ConversionRef.h  Hsi.cpp  Hsl.cpp  Hsv.cpp  Packer.cpp  Rgb.cpp  RgbConversions.cpp  StreamPacker.cpp  ToHsv.cpp  Unpacker.cpp  alpha.cpp  convert.cpp  packer.cpp  rgb.cpp  unpack.cpp
